force-app/main/default/objects/IFv2_Request__c/fields/PlantCode__c.field-meta.xml
<CustomField>
    <fullName>PlantCode__c</fullName>
    <description>Plant Code field.</description>
    <inlineHelpText>Seperate multiple inputs in lines</inlineHelpText>
    <label>Plant code / Production location code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>