force-app/main/default/objects/IFv2_Request__c/fields/PlantspecificvendorCode__c.field-meta.xml
<CustomField>
    <fullName>PlantspecificvendorCode__c</fullName>
    <description>Plant specific vendor Code field</description>
    <inlineHelpText>Seperate multiple input in lines.</inlineHelpText>
    <label>Plant specific vendor Code</label>
    <type>TextArea</type>
</CustomField>