force-app/main/default/objects/IFv2_Request__c/fields/PredefinedWorkflow__c.field-meta.xml
<CustomField>
    <fullName>PredefinedWorkflow__c</fullName>
    <description>Used in Predefined Workflow approvals</description>
    <label>Predefined Workflow</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RegionPredefinedWF__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ISP Concept Review and Approval in Department(for SGCN Users)</fullName>
            </value>
            <value>
                <fullName>BCP Application - External Web Access application</fullName>
            </value>
            <value>
                <fullName>FTS Application-Change request-Parameter/Batch Job Change</fullName>
            </value>
            <value>
                <fullName>FTS Application-Change request-Process/Function Change</fullName>
            </value>
            <value>
                <fullName>FTS Application-Change request-Role Change</fullName>
            </value>
            <value>
                <fullName>FTS Application-User and Authorization</fullName>
            </value>
            <value>
                <fullName>SG Quotation Approval</fullName>
            </value>
            <value>
                <fullName>SPA Approval</fullName>
            </value>
            <value>
                <fullName>RBET Staff Internal Changes</fullName>
            </value>
            <value>
                <fullName>Approval of various moviments</fullName>
            </value>
            <value>
                <fullName>Ballots Exchange</fullName>
            </value>
            <value>
                <fullName>Change Price / Quota</fullName>
            </value>
            <value>
                <fullName>Creating Miscellaneous Clients</fullName>
            </value>
            <value>
                <fullName>Emission of international debit Invoices</fullName>
            </value>
            <value>
                <fullName>Entrance Request for External</fullName>
            </value>
            <value>
                <fullName>FCM Layout Approval</fullName>
            </value>
            <value>
                <fullName>Financial Process Request - Debit customers</fullName>
            </value>
            <value>
                <fullName>Financial Process Request - Release Notice DG: Automakers</fullName>
            </value>
            <value>
                <fullName>IFE Process</fullName>
            </value>
            <value>
                <fullName>Invoice Service Approval</fullName>
            </value>
            <value>
                <fullName>IO/RS/PEP Register on SAP - SG Factory</fullName>
            </value>
            <value>
                <fullName>MAE Acquisition and release</fullName>
            </value>
            <value>
                <fullName>Packaging Approval of Purchased Parts</fullName>
            </value>
            <value>
                <fullName>Price changing/Debit or Credit Invoice - Complementar Notes</fullName>
            </value>
            <value>
                <fullName>Price changing/Debit or Credit Invoice - SG - AL Logistics</fullName>
            </value>
            <value>
                <fullName>Price changing/Debit or Credit Invoice - SG - AL Sales</fullName>
            </value>
            <value>
                <fullName>Price changing/Debit or Credit Invoice - SG – APV</fullName>
            </value>
            <value>
                <fullName>Price changing/Debit or Credit Invoice - SG - Technical Fator/Coming</fullName>
            </value>
            <value>
                <fullName>Product Release Request SG</fullName>
            </value>
            <value>
                <fullName>Quote Form - Low Fixed Asset by Scrap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>