force-app/main/default/objects/IFv2_Request__c/fields/ProductClass__c.field-meta.xml
<CustomField>
    <fullName>ProductClass__c</fullName>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C6X</fullName>
            </value>
            <value>
                <fullName>PC-Starter</fullName>
            </value>
            <value>
                <fullName>CV-Starter</fullName>
            </value>
            <value>
                <fullName>NBL</fullName>
            </value>
            <value>
                <fullName>LIX</fullName>
            </value>
            <value>
                <fullName>Charge forward/Tovább számlázás</fullName>
            </value>
            <value>
                <fullName>Relais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>