force-app/main/default/objects/IFv2_Request__c/fields/ProductionPlant__c.field-meta.xml
<CustomField>
    <fullName>ProductionPlant__c</fullName>
    <label>Production Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>