force-app/main/default/objects/IFv2_Request__c/fields/PurchasingArea__c.field-meta.xml
<CustomField>
    <fullName>PurchasingArea__c</fullName>
    <description>Used in Indirect Purchasing Approval</description>
    <inlineHelpText>Select Purchasing Area</inlineHelpText>
    <label>Purchasing Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consulting, Temp.-Labor, Development-, Training Services</fullName>
            </value>
            <value>
                <fullName>Hardware, Software, IT-Services</fullName>
            </value>
            <value>
                <fullName>Logistics Services</fullName>
            </value>
            <value>
                <fullName>MAE - MAE1</fullName>
            </value>
            <value>
                <fullName>Maintenance, Repair and Operations</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>unbundled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>