force-app/main/default/objects/IFv2_Request__c/fields/Reason1__c.field-meta.xml
<CustomField>
    <fullName>Reason1__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>IT (System issues)</fullName>
            </value>
            <value>
                <fullName>Complete Corrections</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>