force-app/main/default/objects/IFv2_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Used for Badgemanagement Workflow</description>
    <label>Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>