force-app/main/default/objects/IFv2_Request__c/fields/ReasonComment__c.field-meta.xml
<CustomField>
    <fullName>ReasonComment__c</fullName>
    <description>Used in China Applications</description>
    <inlineHelpText>Please specify the reason</inlineHelpText>
    <label>Reason/Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>