force-app/main/default/objects/IFv2_Request__c/fields/reAssignedToProxyForApproval__c.field-meta.xml
<CustomField>
    <fullName>reAssignedToProxyForApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>reAssignedToProxyForApproval</label>
    <type>Checkbox</type>
</CustomField>