force-app/main/default/objects/IFv2_Request__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Used in Indirect Purchasing Approval.</description>
    <inlineHelpText>Region to be selected according to the location of supplier&apos;s responsible buyer. E.g:  Supplier under responsibility of a PUD-HU buyer, Region must be Europe-Hungary. The region &quot;Global&quot; must be selected only for suppliers under responsibility of HQ</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africa - SouthAfrica</fullName>
            </value>
            <value>
                <fullName>Asia - China</fullName>
            </value>
            <value>
                <fullName>Asia - India</fullName>
            </value>
            <value>
                <fullName>Asia - Japan</fullName>
            </value>
            <value>
                <fullName>Asia - Korea</fullName>
            </value>
            <value>
                <fullName>Europe - France</fullName>
            </value>
            <value>
                <fullName>Europe - Germany</fullName>
            </value>
            <value>
                <fullName>Europe - Hungary</fullName>
            </value>
            <value>
                <fullName>Europe - Italy</fullName>
            </value>
            <value>
                <fullName>Europe - Portugal</fullName>
            </value>
            <value>
                <fullName>Europe - Spain</fullName>
            </value>
            <value>
                <fullName>North America - Mexico</fullName>
            </value>
            <value>
                <fullName>North America - USA</fullName>
            </value>
            <value>
                <fullName>South America - Brazil</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>