force-app/main/default/objects/IFv2_Request__c/fields/RegionPredefinedWF__c.field-meta.xml
<CustomField>
    <fullName>RegionPredefinedWF__c</fullName>
    <description>Used for Predefined mapping Workflow</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>