force-app/main/default/objects/IFv2_Request__c/fields/Release_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Release_Recommendation__c</fullName>
    <label>Overall evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Design Verification passed</fullName>
            </value>
            <value>
                <fullName>Design Verification not fully passed – open low relevant test(s)</fullName>
            </value>
            <value>
                <fullName>Design Verification partly failed – open relevant test(s)</fullName>
            </value>
            <value>
                <fullName>Design Verification failed</fullName>
            </value>
            <value>
                <fullName>Limited Release</fullName>
                <isActive>false</isActive>
                <label>Limited Release</label>
            </value>
            <value>
                <fullName>No Release</fullName>
                <isActive>false</isActive>
                <label>No Release</label>
            </value>
            <value>
                <fullName>Unlimited Release</fullName>
                <isActive>false</isActive>
                <label>Unlimited Release</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>