force-app/main/default/objects/IFv2_Request__c/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <description>This field is used for reporting in eSignature request.</description>
    <inlineHelpText>Select the Release date.</inlineHelpText>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>