force-app/main/default/objects/IFv2_Request__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Used in Concession and MGP Workflow</description>
    <inlineHelpText>Please enter any remarks for this process</inlineHelpText>
    <label>Remarks</label>
    <length>132</length>
    <type>Text</type>
</CustomField>