force-app/main/default/objects/IFv2_Request__c/fields/RequestExtension1__c.field-meta.xml
<CustomField>
    <fullName>RequestExtension1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is look up for Request Extension1-APAC.</description>
    <label>Request Extension1</label>
    <referenceTo>IFv2_RequestExtension1__c</referenceTo>
    <relationshipLabel>Request Extension1</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>