force-app/main/default/objects/IFv2_Request__c/fields/RequestExtension2__c.field-meta.xml
<CustomField>
    <fullName>RequestExtension2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is look up for Request Extension2-EMEA</description>
    <label>Request Extension2</label>
    <referenceTo>IFv2_RequestExtension2__c</referenceTo>
    <relationshipLabel>Request Extension2</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>