force-app/main/default/objects/IFv2_Request__c/fields/RequestExtension3__c.field-meta.xml
<CustomField>
    <fullName>RequestExtension3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is look up for Request Extension3 - NALA</description>
    <label>Request Extension3</label>
    <referenceTo>IFv2_RequestExtension3__c</referenceTo>
    <relationshipLabel>Request Extension3</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>