force-app/main/default/objects/IFv2_Request__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <description>Used in badge Management</description>
    <label>Request type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Create new role</fullName>
            </value>
            <value>
                <fullName>Change existing role</fullName>
            </value>
            <value>
                <fullName>Delete existing role</fullName>
            </value>
            <value>
                <fullName>Change role approvers</fullName>
            </value>
            <value>
                <fullName>Personenausweis</fullName>
            </value>
            <value>
                <fullName>Parkgenehmigung</fullName>
            </value>
            <value>
                <fullName>Zutrittsausweis</fullName>
            </value>
            <value>
                <fullName>Einfahrgenehmigung</fullName>
            </value>
            <value>
                <fullName>Request access / role</fullName>
            </value>
            <value>
                <fullName>Remove role</fullName>
            </value>
            <value>
                <fullName>Remove access (inlc. deleting all roles)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>