force-app/main/default/objects/IFv2_Request__c/fields/ResponsibleBuyerIdenticalwRequester__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleBuyerIdenticalwRequester__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in indirect purchasing approval.</description>
    <inlineHelpText>Checked = Yes</inlineHelpText>
    <label>Responsible Buyer identical  w.Requester</label>
    <type>Checkbox</type>
</CustomField>