force-app/main/default/objects/IFv2_Request__c/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <label>Return date</label>
    <type>Date</type>
</CustomField>