force-app/main/default/objects/IFv2_Request__c/fields/Riskassessment__c.field-meta.xml
<CustomField>
    <fullName>Riskassessment__c</fullName>
    <description>Used in Concession Workflow</description>
    <inlineHelpText>Maximum Characters Allowed - 132</inlineHelpText>
    <label>Risk assessment</label>
    <length>132</length>
    <type>Text</type>
</CustomField>