force-app/main/default/objects/IFv2_Request__c/fields/Role01__c.field-meta.xml
<CustomField>
    <fullName>Role01__c</fullName>
    <description>Used to define the role of the Approver</description>
    <label>Role 01</label>
    <length>250</length>
    <type>Text</type>
</CustomField>