force-app/main/default/objects/IFv2_Request__c/fields/Role03__c.field-meta.xml
<CustomField>
    <fullName>Role03__c</fullName>
    <description>Used to define the role of the Approver</description>
    <label>Role 03</label>
    <length>255</length>
    <type>Text</type>
</CustomField>