force-app/main/default/objects/IFv2_Request__c/fields/SAPInstance__c.field-meta.xml
<CustomField>
    <fullName>SAPInstance__c</fullName>
    <description>Used in Concession Workflow</description>
    <label>SAP Instance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PSG</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>