force-app/main/default/objects/IFv2_Request__c/fields/SAPSystem__c.field-meta.xml
<CustomField>
    <fullName>SAPSystem__c</fullName>
    <defaultValue>&quot;SAP / PSG&quot;</defaultValue>
    <label>SAP System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>