force-app/main/default/objects/IFv2_Request__c/fields/SAPVendorCode__c.field-meta.xml
<CustomField>
    <fullName>SAPVendorCode__c</fullName>
    <formula>SupplierCustomerNo__r.IFv2_SAPVendorCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Vendor Code</label>
    <type>Text</type>
</CustomField>