force-app/main/default/objects/IFv2_Request__c/fields/Scan__c.field-meta.xml
<CustomField>
    <fullName>Scan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the ICO request to its related SCAN record</description>
    <label>Scan</label>
    <referenceTo>Scan__c</referenceTo>
    <relationshipLabel>ICO Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>