force-app/main/default/objects/IFv2_Request__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used in General Approval Form</description>
    <label>Serial</label>
    <type>Checkbox</type>
</CustomField>