force-app/main/default/objects/IFv2_Request__c/fields/SourcingProposalCOQ__c.field-meta.xml
<CustomField>
    <fullName>SourcingProposalCOQ__c</fullName>
    <inlineHelpText>Please fill this field when subject type is COQ Approval</inlineHelpText>
    <label>Sourcing Proposal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>