force-app/main/default/objects/IFv2_Request__c/fields/SpecificRequirement__c.field-meta.xml
<CustomField>
    <fullName>SpecificRequirement__c</fullName>
    <description>Used in Concession</description>
    <label>Specific Requirement</label>
    <length>40</length>
    <type>Text</type>
</CustomField>