force-app/main/default/objects/IFv2_Request__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start date</label>
    <type>Date</type>
</CustomField>