force-app/main/default/objects/IFv2_Request__c/fields/StartFrom__c.field-meta.xml
<CustomField>
    <fullName>StartFrom__c</fullName>
    <description>used in china workflows</description>
    <label>Start From</label>
    <type>Date</type>
</CustomField>