force-app/main/default/objects/IFv2_Request__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>This field is used in Workflow release of documented procedures.</description>
    <label>Subject</label>
    <length>128</length>
    <type>Text</type>
</CustomField>