force-app/main/default/objects/IFv2_Request__c/fields/SubjectType__c.field-meta.xml
<CustomField>
    <fullName>SubjectType__c</fullName>
    <description>Subject type of the Request</description>
    <inlineHelpText>Select the appropriate subject type.</inlineHelpText>
    <label>Subject Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreements</fullName>
            </value>
            <value>
                <fullName>Debit Notes</fullName>
            </value>
            <value>
                <fullName>Credit Notes</fullName>
            </value>
            <value>
                <fullName>Purchasing Orders</fullName>
            </value>
            <value>
                <fullName>Sample Orders</fullName>
            </value>
            <value>
                <fullName>Value Independent</fullName>
            </value>
            <value>
                <fullName>Price Decision</fullName>
            </value>
            <value>
                <fullName>Price Decision (delta volume)</fullName>
            </value>
            <value>
                <fullName>Payment Terms and Incoterms</fullName>
            </value>
            <value>
                <fullName>Sourcing Decision – COQ Approval Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>