force-app/main/default/objects/IFv2_Request__c/fields/SubRegion__c.field-meta.xml
<CustomField>
    <fullName>SubRegion__c</fullName>
    <description>Its a dependent picklist based on Region field.</description>
    <inlineHelpText>Values based on the Region selected</inlineHelpText>
    <label>Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Brits (SGZA)</fullName>
            </value>
            <value>
                <fullName>Changchun (SGCN)</fullName>
            </value>
            <value>
                <fullName>Changsha (SGCN)</fullName>
            </value>
            <value>
                <fullName>Drancy (SGFR)</fullName>
            </value>
            <value>
                <fullName>Hildesheim (SGDE)</fullName>
            </value>
            <value>
                <fullName>Itupeva (SGBR)</fullName>
            </value>
            <value>
                <fullName>Lerma (SGMX)</fullName>
            </value>
            <value>
                <fullName>Miskolc (SGHU)</fullName>
            </value>
            <value>
                <fullName>Naganathapura (SGIN)</fullName>
            </value>
            <value>
                <fullName>Novi (SGUS)</fullName>
            </value>
            <value>
                <fullName>Stuttgart (SGDE)</fullName>
            </value>
            <value>
                <fullName>Torino (SGIT)</fullName>
            </value>
            <value>
                <fullName>Treto (SGES)</fullName>
            </value>
            <value>
                <fullName>Vila do Conde (SGPT)</fullName>
            </value>
            <value>
                <fullName>Yokohama (SGJP)</fullName>
            </value>
            <value>
                <fullName>Yongin-si (SGSK)</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>