force-app/main/default/objects/IFv2_Request__c/fields/Subworkflow__c.field-meta.xml
<CustomField>
    <fullName>Subworkflow__c</fullName>
    <description>Used for China Leave and Overtime Request</description>
    <label>Subworkflow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leave Individual</fullName>
            </value>
            <value>
                <fullName>Overtime Individual</fullName>
            </value>
            <value>
                <fullName>Leave Batch</fullName>
            </value>
            <value>
                <fullName>Overtime Batch</fullName>
            </value>
            <value>
                <fullName>Leave Cancellation</fullName>
            </value>
            <value>
                <fullName>Time Data Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>