force-app/main/default/objects/IFv2_Request__c/fields/SubWorkflowIndiaTravel__c.field-meta.xml
<CustomField>
    <fullName>SubWorkflowIndiaTravel__c</fullName>
    <description>Sub workflow for India Travel Application</description>
    <label>Sub Workflow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Book My Taxi</fullName>
            </value>
            <value>
                <fullName>MITRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>