force-app/main/default/objects/IFv2_Request__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Used in HU Scrapping Workflow</description>
    <formula>IF(Workflow__c == $CustomMetadata.IFv2_Workflows__mdt.ICOWorkflow1.Name__c, 
Workflow__c + &apos; - Approval for Missing Goods Receipt&apos;, 
IF(Workflow__c == $CustomMetadata.IFv2_Workflows__mdt.ICOWorkflow2.Name__c, 
Workflow__c + &apos; - Approval for Price Variance&apos;, 
IF(Workflow__c == $CustomMetadata.IFv2_Workflows__mdt.ICOWorkflow3.Name__c, 
Workflow__c + &apos; - Approval for Quantity Variance&apos;, 
IF(Workflow__c == $CustomMetadata.IFv2_Workflows__mdt.ICOWorkflow4.Name__c, 
Workflow__c + &apos; - Approval for Functional Correctness&apos;, 
IF(Workflow__c == $CustomMetadata.IFv2_Workflows__mdt.ICOWorkflow5.Name__c, 
Workflow__c + &apos; - Approval for Unplanned Delivery Cost&apos;, 
IF(Workflow__c == $CustomMetadata.IFv2_Workflows__mdt.ICOWorkflow6.Name__c, 
Workflow__c + &apos; - Approval for FI Workflows (non-PO related invoices)&apos;, 
IF(Workflow__c == $CustomMetadata.IFv2_Workflows__mdt.ICOWorkflow8.Name__c, 
Workflow__c + &apos; - Approval for Price Check&apos;, 
&apos;&apos;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary</label>
    <type>Text</type>
</CustomField>