force-app/main/default/objects/IFv2_Request__c/fields/SupplierCustomerNo__c.field-meta.xml
<CustomField>
    <fullName>SupplierCustomerNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier / Customer No.</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests (Supplier / Customer No.)</relationshipLabel>
    <relationshipName>Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>