force-app/main/default/objects/IFv2_Request__c/fields/SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SupplierName__c</fullName>
    <description>Used in indirect Purchasing Approval</description>
    <label>Supplier/Customer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>