force-app/main/default/objects/IFv2_Request__c/fields/TaxiType__c.field-meta.xml
<CustomField>
    <fullName>TaxiType__c</fullName>
    <label>Taxi Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TransportationTools__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Swift Dzire</fullName>
            </value>
            <value>
                <fullName>Toyota Etios</fullName>
            </value>
            <value>
                <fullName>Innova</fullName>
            </value>
            <value>
                <fullName>Tata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>