force-app/main/default/objects/IFv2_Request__c/fields/TINNumber__c.field-meta.xml
<CustomField>
    <fullName>TINNumber__c</fullName>
    <formula>SupplierCustomerNo__r.IFv2_TINNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TIN Number</label>
    <type>Text</type>
</CustomField>