force-app/main/default/objects/IFv2_Request__c/fields/ToDate__c.field-meta.xml
<CustomField>
    <fullName>ToDate__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory in case of usage information = medical reasons)</description>
    <label>To Date</label>
    <type>Date</type>
</CustomField>