force-app/main/default/objects/IFv2_Request__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total in TEUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>