force-app/main/default/objects/IFv2_Request__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount(Text)</label>
    <length>16</length>
    <type>Text</type>
</CustomField>