force-app/main/default/objects/IFv2_Request__c/fields/Total_Contracted_Capacity_Man_days__c.field-meta.xml
<CustomField>
    <fullName>Total_Contracted_Capacity_Man_days__c</fullName>
    <label>Total Contracted Capacity (Man-days)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>